--- a/index2.html
+++ b/index2.html
@@ -9,10 +9,12 @@
 <h2>My First JavaScript</h2>
 
 <button type="button"
-onclick="document.getElementById('demo').innerHTML = sum()">
-Click me to display the sum of 10 numbers.</button>
-
-<p id="demo"></p>
+onclick="document.getElementById('demo').innerHTML = add()">
+Click me to display the sum.</button>
+<script>
+    alert(PracticeIfThen(40));
+</script>
+    
 
 
 </body>
